<resources>
    <string name="app_name">Counter Apps</string>
    <string name="vs">vs</string>
    <string name="basketball">Basketball</string>
    <string name="football">Football</string>
    <string name="team_name">Team Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="_1_point">+1 Point</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="_2_point">+2 Point</string>
    <string name="_3_point">+3 Point</string>
</resources>
