<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/tesback"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar"></include>



    <LinearLayout
        android:background="@drawable/se"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"

            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edtTeamA"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="120dp"
                android:layout_marginEnd="120dp"
                android:layout_weight="1"
                android:ems="3"
                android:imeOptions="actionNext"
                android:hint="@string/team_a"
                android:padding="12dp"
                android:typeface="serif" />


        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/mdtp_white"
            android:padding="8dp"
            android:text="@string/vs"
            android:textColor="@color/red"
            android:textSize="30sp"
            android:textStyle="bold" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            >

            <EditText
                android:imeOptions="actionNext"

                android:gravity="end"
                android:id="@+id/edtTeamB"
                android:layout_marginTop="6dp"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginStart="120dp"
                android:layout_weight="1"
                android:ems="3"
                android:layout_marginBottom="8dp"
                android:maxLength="10"
                android:hint="@string/team_b"
                android:padding="12dp"
                android:typeface="sans" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mdtp_white">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:imeOptions="actionNext"
            android:id="@+id/edtNamaPrt"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="3"
            android:maxLength="10"
            android:hint="Match Name "
            android:padding="12dp"
            android:typeface="sans" />
    </android.support.design.widget.TextInputLayout>

    </LinearLayout>



        <EditText
            android:layout_margin="16dp"
            android:drawablePadding="20dp"
            android:gravity="center"
            android:id="@+id/edtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_datepick"
            android:clickable="true"
            android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:hint="Date"
            android:editable="false"
            android:inputType="none"
            android:singleLine="true"
            android:typeface="normal"
            android:textStyle="bold"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>
    <TextView
        android:layout_marginLeft="16dp"
        android:text="Match Type : "
        android:textAllCaps="false"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <CheckBox
            android:id="@+id/cbFootball"
            android:text="@string/football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"/>

        <CheckBox
            android:layout_weight="1"
            android:id="@+id/cbBasket"
            android:text="@string/basketball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="20dp"
        android:paddingRight="60dp"
        android:paddingLeft="60dp"
        android:id="@+id/btnstartc"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@drawable/txt_ptom"
        android:textStyle="bold"
        android:background="@drawable/btn_lengkung_gbng"
        android:text="Start Counting"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>