<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/pertandbaru"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"

    tools:context="com.example.z.counter.activity.PertandinganBaru">


    <include layout="@layout/toolbar" />

    <EditText
        android:layout_margin="16dp"
        android:gravity="center"
        android:id="@+id/edtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_datepick"
        android:clickable="true"
        android:drawableRight="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:drawableEnd="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:hint="Date"
        android:editable="false"
        android:inputType="none"
        android:singleLine="true"
        android:typeface="monospace"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"/>




 <CheckBox
     android:id="@+id/cbFootball"
     android:text="@string/football"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:checked="true"/>
 <CheckBox
     android:id="@+id/cbBasket"
     android:text="@string/basketball"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
         android:padding="5dp"
        app:cardCornerRadius="2dp"
        app:cardBackgroundColor="@color/putihradaabu"


        app:cardElevation="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:background="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"></View>'
                <TextView
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:textStyle="normal"
                    android:textColor="@color/black"
                    android:text="@string/team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:background="@color/black"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"></View>'
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edtTeamA"
                        android:singleLine="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="200dp"
                        android:layout_marginRight="200dp"
                        android:layout_weight="1"
                        android:ems="3"
                        android:hint="Team A "
                        android:padding="12dp"
                        android:typeface="serif" />


                </android.support.design.widget.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/vs" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                android:id="@+id/edtTeamB"
                    android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="200dp"
                android:layout_marginStart="200dp"
                android:layout_weight="1"
                android:ems="3"
                android:maxLength="10"
                android:hint="Team B "
                android:padding="12dp"
                android:typeface="sans" />
            </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>




    <Button
        android:id="@+id/btnstartc"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textColor="@color/mdtp_white"
        android:textStyle="bold"
        android:background="@drawable/custom_button"
        android:text="Start Counting"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


  <!--  <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@style/hintstyle"

        >

        <EditText
            android:id="@+id/edtketerangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/editbg"
            android:hint="Keterangan pertandingan.."
            android:imeOptions="actionNext"
            android:inputType="textMultiLine"
            android:lines="3"
            android:padding="5dp" />


    </android.support.design.widget.TextInputLayout>-->

    <!-- <TextView
                android:textColor="@color/black"
                android:text="Monday, 25 Januari 2017"
                android:textSize="17sp"
                android:padding="7dp"
                android:background="@drawable/bg_abu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />-->

</LinearLayout>
