<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/putihradaabu"
    android:layout_height="match_parent"
    tools:context="com.example.z.counter.activity.FootballCounter">
    <include layout="@layout/toolbar" android:id="@+id/toolbarr"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bsbl"
        android:alpha="0.6"/>
    <LinearLayout
        android:layout_below="@id/toolbarr"
        android:id="@+id/lnteamname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        >

        <RelativeLayout

            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:elevation="5dp"
            android:background="@drawable/bg_teamname"
            android:id="@+id/relativeTeamA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="3dp">

            <TextView

                android:id="@+id/teksTeamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="@string/team_a"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/edit_pen" />
        </RelativeLayout>
        <TextView
            android:textSize="30sp"
            android:textColor="@color/red"
            android:text="@string/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--<View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"></View>-->

        <RelativeLayout
            android:elevation="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/bg_teamname"
            android:id="@+id/relativeTeamB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="3dp">

            <TextView
                android:id="@+id/teksTeamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:text="Team B"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:src="@drawable/edit_pen" />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/lnteamname"
        android:id="@+id/lnscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_a"
            android:textSize="130sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="0"/>
        <View

            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"></View>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/score_b"
            android:textSize="130sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln3point"
        android:layout_below="@id/lnscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        >



        <Button
            android:background="@drawable/btn_ptom"
            android:textStyle="bold"
            android:id="@+id/plus3a"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_point"
            android:textColor="@drawable/txt_mtop" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"/>


        <Button
            android:background="@drawable/btn_ptom"
            android:id="@+id/plus3b"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_point"
            android:textColor="@drawable/txt_mtop"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/ln3point"
        android:id="@+id/ln2point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        >



        <Button
            android:background="@drawable/btn_ptom"
            android:textStyle="bold"
            android:id="@+id/plus2a"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_point"
            android:textColor="@drawable/txt_mtop" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            />



        <Button
            android:background="@drawable/btn_ptom"
            android:id="@+id/plus2b"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_point"
            android:textColor="@drawable/txt_mtop"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ln2point"
        android:id="@+id/ln1point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
    >



        <Button
            android:background="@drawable/btn_ptom"
            android:textStyle="bold"
            android:id="@+id/plus1a"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_point"
            android:textColor="@drawable/txt_mtop" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:layout_marginBottom="8dp"/>


        <Button
            android:background="@drawable/btn_ptom"
            android:id="@+id/plus1b"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_point"
            android:textColor="@drawable/txt_mtop"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ln1point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
android:layout_centerHorizontal="true"        >


        <Button
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@drawable/txt_ptom"
            android:id="@+id/btnReset"
            android:background="@drawable/btn_mtop"
            android:text="Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <Button
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@drawable/txt_ptom"
            android:id="@+id/btnSave"
            android:background="@drawable/btn_mtop"
            android:text="Save Match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>






</RelativeLayout>
